force-app/main/default/objects/Draw__c/Draw__c.object-meta.xml
<CustomObject>
    <description>Renovation draws against the Renovation Holdback</description>
    <label>Draw</label>
    <nameField>
        <label>Renovation Draw #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Draws</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>