force-app/main/default/objects/Draw__c/fields/Draw_Date__c.field-meta.xml
<CustomField>
    <fullName>Draw_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Bridge Use</description>
    <label>Draw Date</label>
    <type>Date</type>
</CustomField>