force-app/main/default/objects/Draw__c/fields/Draw_Number__c.field-meta.xml
<CustomField>
    <fullName>Draw_Number__c</fullName>
    <formula>VALUE(Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Draw Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>